# Data_science_dummy_exam

./: .gitignore  README.md  pyproject.toml
project/: main.ipynb
