[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["ignition <valentijn.ignition@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
